exercises/04_function_like/02_custom_syntax/tests/fail/unknown_method.stderr
error: expected `get` or `post`
 --> tests/fail/unknown_method.rs:6:9
  |
6 |         delete "/users",
  |         ^^^^^^
